@@ -1,4 +1,8 @@
 2007-12-06  Douglas S.Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/CalculateEstimatedDates.py: pass in handle to link
+	* src/PluginUtils/_PluginWindows.py: New clickable text tests
+
+2007-12-06  Douglas S.Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/CalculateEstimatedDates.py: experimental click in text
 	* src/PluginUtils/_PluginWindows.py: experimental write_results_link()
 
